[package]
name = "drosera"
version = "0.3.2"
authors = ["Emil Englesson <englesson.emil@gmail.com>"]
edition = "2021"
description = "Small and fairly efficient SSH tarpit server"
repository = "https://github.com/LimeEng/drosera/"
license = "MIT"
keywords = ["tarpit", "server", "ssh"]

exclude = [
    ".github/**"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
clap = { version = "3.2", features = ["cargo"] }
