[package]
name = "drosera"
version = "0.3.2"
authors = ["Emil Englesson <englesson.emil@gmail.com>"]
edition = "2024"
description = "SSH tarpit server"
repository = "https://github.com/LimeEng/drosera/"
license = "MIT"
keywords = ["tarpit", "server", "ssh"]
categories = ["command-line-utilities"]

exclude = [
    ".github/**"
]

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
futures = "0.3"
rand = "0.9"
tokio = { version = "1.0", features = ["full"] }
